# pas

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIVERGENCE.md  LICENSE  README.md  SPEC.md  suggested_improvements_codex.md  suggested_improvements_ds.md  suggested_improvements_ds_medium.md
.cargo/: audit.toml
.github/workflows/: build-windows.yml  deploy-website.yml  release.yml  validate.yml
crates/pas-app/: Cargo.toml  tauri.conf.json
crates/pas-app/capabilities/: default.json
crates/pas-app/icons/: icon.icns
crates/pas-app/src/: lib.rs  main.rs  oauth.rs
crates/pas-engine/: Cargo.toml
crates/pas-engine/src/: lib.rs  libname.rs  library.rs  macros.rs  pas_sql.rs  query.rs  rewrite.rs  sas_sql.rs  scan.rs  session.rs  split.rs  types.rs
crates/pas-engine/src/datastep/: ast.rs  eval_tests.rs  exec.rs  funcs.rs  lex.rs  mod.rs  parse.rs
crates/pas-engine/src/procs/: mod.rs  parse.rs  print.rs  sort.rs  transpose.rs
crates/pas-engine/tests/: golden.rs
docs/: PROJECT_REVIEW_2026-06-09.md
docs/superpowers/plans/: 2026-05-26-ai-file-edits.md  2026-06-04-chatgpt-oauth.md  2026-06-05-agent-input-and-model-refresh.md  2026-06-07-marketing-website.md
example_project/: 00_test.sas  pojeto_teste.pas.json  project.pas.json  test_data_joins_operations.sas  test_flow.pas.json
examples/: macro_demo.pas  macro_demo.sas
tests/golden/: 01_proc_sql_basic.expected.json  01_proc_sql_basic.pas  02_data_step_derive.expected.json  02_data_step_derive.pas  03_by_first_last.expected.json  03_by_first_last.sas  04_merge.expected.json  04_merge.pas  05_datalines_array.expected.json  05_datalines_array.sas  06_select_when_dates.expected.json  06_select_when_dates.pas  07_pas_sql_extensions.expected.json  07_pas_sql_extensions.pas  08_procs.expected.json  08_procs.pas  09_macro_output.expected.json  09_macro_output.pas  09_macro_output.sas  10_do_while_until.expected.json  10_do_while_until.sas  11_input_informats.expected.json  11_input_informats.sas  12_column_input.expected.json  12_column_input.pas
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
ui/src/: AIChatPanel.tsx  AISettingsModal.tsx  App.tsx  DatasetViewer.tsx  LibraryTree.tsx  MenuBar.tsx  Modal.tsx  ProjectTree.tsx  Splitter.tsx  StatusBar.tsx  Tabs.tsx  editorSetup.ts  menus.ts  panes.tsx  pasLang.ts  projectWorkspace.ts  sasLang.ts  security-smoke.test.mjs  starterProgram.ts  styles.css  tabState.ts  types.ts  useRunner.ts  useZoom.ts  workspaceContext.ts
website/: download.js  download.test.mjs  index.html  styles.css
(+16 files in other folders)
