[workspace]
resolver = "2"
members = ["crates/pas-engine", "crates/pas-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
duckdb = { version = "1.4", features = ["bundled"] }
arrow = { version = "58", features = ["ipc"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
strip = true
