[workspace]
resolver = "2"
members = ["crates/pas-engine", "crates/pas-app"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
duckdb = { version = "1.4", features = ["bundled"] }
arrow = { version = "58", features = ["ipc"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
strip = true
