[package]
name = "pas-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pas-engine = { path = "../pas-engine" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
tracing-subscriber = "0.3"
uuid.workspace = true
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
