[package]
name = "pas-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
duckdb.workspace = true
arrow.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
